--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@commitlint/config-conventional": "^18.4.2",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
+    "clsx": "^2.0.0",
     "eslint": "^8.54.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^14.0.3",
