--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "autoprefixer": "10.4.16",
+    "lottie-react": "^2.4.0",
     "next": "14.0.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
